# Commit2Zen

./: .gitignore  README.md  commit2zen.mjs  config.example.json  index.html  optimize-git-scan-folder-selection.md  package-lock.json  package.json  start-tauri.sh  uno.config.ts  vite.config.js  vite.config.ts  zen_cookies.txt
docs/superpowers/plans/: 2026-04-05-commit2zen-plan.md  2026-04-06-arbitrary-project-plan.md  2026-04-06-tauri-desktop-plan.md
docs/superpowers/specs/: 2026-04-05-commit2zen-design.md  2026-04-06-arbitrary-project-support-design.md  2026-04-06-tauri-desktop-design.md  2026-04-12-commit2zen-optimization-design.md
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create_icon.py
src-tauri/src/: errors.rs  main.rs
src-tauri/src/commands/: account.rs  config.rs  git.rs  llm.rs  mod.rs  report.rs  zentao.rs
src-tauri/src/models/: branch.rs  commit.rs  config.rs  llm.rs  mod.rs  report.rs  scan.rs  task.rs
src-tauri/src/services/: git_service.rs  llm_service.rs  mod.rs  report_service.rs  scanner.rs  skip_list.rs  zentao_service.rs
src/components/: ErrorBoundary.vue
src/router/: index.js
src/stores/: config.js  git.js  llm.js  zentao.js
src/types/: llm.ts
src/utils/: errors.js  llm.ts
src/views/: ConfigView.vue  DashboardView.vue  ExecuteView.vue  HistoryView.vue  HomeView.vue  LLMConfigView.vue
