[package]
name = "commit2zen"
version = "2.0.0"
description = "Git Commit History Manager with Zentao Integration"
authors = ["Commit2Zen Team"]
edition = "2021"

[[bin]]
name = "commit2zen"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json", "native-tls"] }
tokio = { version = "1.37", features = ["full"] }
git2 = "0.19.0"
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
regex = "1.10.4"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }
walkdir = "2.5"
thiserror = "1.0"
tauri-plugin-shell = "2.3.5"
